--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "hbs": "^4.0.1",
     "request": "^2.83.0",
     "yargs": "^10.0.3"
   }
