--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "grunt": "^1.0.1",
     "request": "^2.83.0",
     "yargs": "^10.0.3"
+  },
+  "devDependencies": {
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-uglify": "^3.3.0"
   }
 }
